# bevy_cookiecutter

./: Cargo.toml  README.md  cookiecutter.json
.github/workflows/: ci.yml  cookiecutter.yml  release.yaml  setup-repository.yml  template-ci.yml
{{cookiecutter.crate_name}}/: Cargo.toml  README.md  index.html
{{cookiecutter.crate_name}}/.github/workflows/: ci.yml  release.yaml
{{cookiecutter.crate_name}}/src/: main.rs
