[package]
name = "{{ cookiecutter.crate_name }}"
version = "0.1.0"
publish = false
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = [
  "bevy/bevy_dylib",
]

# Bevy defaults minus audio and some other not needed things
# see https://github.com/bevyengine/bevy/blob/main/Cargo.toml#L31-L54
default = [
  "bevy/animation",
  "bevy/bevy_asset",
  "bevy/bevy_scene",
  "bevy/bevy_winit",
  "bevy/bevy_core_pipeline",
  "bevy/bevy_pbr",
  "bevy/bevy_gltf",
  "bevy/bevy_render",
  "bevy/bevy_sprite",
  "bevy/bevy_text",
  "bevy/bevy_ui",
  "bevy/png",
  "bevy/hdr",
  "bevy/zstd",
  "bevy/x11",
  "bevy/ktx2",
  "bevy/filesystem_watcher",
  "bevy/tonemapping_luts",
]

[dependencies]
# keep the following in sync with Bevy's dependencies
winit = { version = "0.25", features = ["x11"] }

[build-dependencies]
embed-resource = "1.4"
